src/CalculatorParser.py
# Generated from Calculator.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CalculatorParser ( Parser ):

    grammarFileName = "Calculator.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
                     "'|'", "'RES'", "'MEM'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "INTEGER", 
                      "DECIMAL", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
                      "MODULO", "POWER", "REAL_DIVIDE", "RES", "MEM", "WS" ]

    RULE_expression = 0
    RULE_term = 1
    RULE_factor = 2

    ruleNames =  [ "expression", "term", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    NUMBER=3
    INTEGER=4
    DECIMAL=5
    PLUS=6
    MINUS=7
    MULTIPLY=8
    DIVIDE=9
    MODULO=10
    POWER=11
    REAL_DIVIDE=12
    RES=13
    MEM=14
    WS=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculatorParser.TermContext)
            else:
                return self.getTypedRuleContext(CalculatorParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.PLUS)
            else:
                return self.getToken(CalculatorParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.MINUS)
            else:
                return self.getToken(CalculatorParser.MINUS, i)

        def getRuleIndex(self):
            return CalculatorParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = CalculatorParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 6
            self.term()
            self.state = 11
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6 or _la==7:
                self.state = 7
                _la = self._input.LA(1)
                if not(_la==6 or _la==7):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 8
                self.term()
                self.state = 13
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculatorParser.FactorContext)
            else:
                return self.getTypedRuleContext(CalculatorParser.FactorContext,i)


        def MULTIPLY(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.MULTIPLY)
            else:
                return self.getToken(CalculatorParser.MULTIPLY, i)

        def DIVIDE(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.DIVIDE)
            else:
                return self.getToken(CalculatorParser.DIVIDE, i)

        def MODULO(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.MODULO)
            else:
                return self.getToken(CalculatorParser.MODULO, i)

        def POWER(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.POWER)
            else:
                return self.getToken(CalculatorParser.POWER, i)

        def REAL_DIVIDE(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.REAL_DIVIDE)
            else:
                return self.getToken(CalculatorParser.REAL_DIVIDE, i)

        def expression(self):
            return self.getTypedRuleContext(CalculatorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = CalculatorParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.state = 26
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 13, 14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 14
                self.factor()
                self.state = 19
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3840) != 0):
                    self.state = 15
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3840) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 16
                    self.factor()
                    self.state = 21
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 22
                self.match(CalculatorParser.REAL_DIVIDE)
                self.state = 23
                self.expression()
                self.state = 24
                self.match(CalculatorParser.REAL_DIVIDE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(CalculatorParser.NUMBER, 0)

        def expression(self):
            return self.getTypedRuleContext(CalculatorParser.ExpressionContext,0)


        def RES(self):
            return self.getToken(CalculatorParser.RES, 0)

        def MEM(self):
            return self.getToken(CalculatorParser.MEM, 0)

        def getRuleIndex(self):
            return CalculatorParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = CalculatorParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_factor)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.match(CalculatorParser.NUMBER)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.match(CalculatorParser.T__0)
                self.state = 30
                self.expression()
                self.state = 31
                self.match(CalculatorParser.T__1)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.match(CalculatorParser.RES)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 34
                self.match(CalculatorParser.MEM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





